--- a/styles/main.css
+++ b/styles/main.css
@@ -142,20 +142,7 @@ body {
     justify-content: space-between;
 }
 
-.social-links {
-    width: 100%;
-    display: flex;
-    justify-content: space-around;
-}
 
-.social-links a {
-   padding: 0.25rem;
-   border-bottom: solid 1px var(--background-lighter);
-}
-
-.social-links a:hover {
-    border-bottom: solid 1px var(--text-color);
-}
 
 
 
@@ -170,14 +157,8 @@ hr {
     opacity: 0.2;
 }
 
-.social-links a {
-    text-decoration: none;
-    color: var(--text-color);
-}
 
-.social-links a:hover {
-    text-decoration: underline;
-}
+
 
 .cv-download {
     display: block;
@@ -395,6 +376,17 @@ pre {
     background-color: var(--background-darker);
 }
 
+.snippet-content  {
+    max-width: 100% !important;
+    overflow-x: auto !important;
+}
+
+.snippet-content pre {
+    white-space: pre-wrap; /* Allows code to wrap */
+    word-break: break-all; /* Breaks long words to prevent overflow */
+    overflow-x: auto;
+}
+
 .footer,
 .navigation {
     display: flex;
@@ -477,42 +469,114 @@ pre {
     display: block;
 }
 
+
 .icon-wrapper {
-    position: relative;
     display: flex;
-    align-items: center;
-    padding: 1rem 0;
-    cursor: pointer;
-
+    gap: 20px;
 }
-
-.tooltip {
-    visibility: hidden;
-    background: linear-gradient(90deg,
-            var(--background-darker) 0%,
-            var(--background-lighter) 100%);
-    color: var(--text-color);
-    text-align: center;
-    border-radius: 0.5rem;
-    padding: 0.25rem;
+.icon-wrapper i {
+    background-color: var(--text-color);
+    border-radius: 50%;
+    height: 2rem;
+    width: 2rem;
+    box-sizing: border-box;
+    flex-shrink: 0;
+    display: grid;
+    place-items: center;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.05);
+}
+.icon-wrapper i svg {
+    height: 1.25rem;
+    fill: var(--background-darker);
+}
+.icon-wrapper i::before {
+    content: attr(data-social);
     position: absolute;
-    z-index: 1;
-    width: max-content;
-    top: 50%;
-    right: 100%;
-    transform: translateX(-1rem) translateY(-50%);
-    box-shadow: var(--text-color) 0px 1px 2px;
-    font-size: 0.75rem;
+    background-color: var(--accent-color);
+    color: var(--background-darker);
+    text-decoration: none;
+    padding: 0.5em 1em;
+    border-radius: 100px;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.05);
+    transform: translateY(-30px) rotate(25deg);
+    opacity: 0;
+    transition: 200ms cubic-bezier(0.42, 0, 0.44, 1.68);
+}
+.icon-wrapper i:hover {
+    background-color: var(--accent-color);
+    fill: white;
 }
 
-.icon-wrapper:hover .tooltip {
-    visibility: visible;
+.icon-wrapper i:hover::before {
+    transform: translateX(-100px) rotate(0);
+    opacity: 1;
 }
 
 
-.white-png {
-    filter: invert(100%) sepia(0%) saturate(3569%) hue-rotate(10deg) brightness(115%) contrast(110%);
+
+
+.socials-container {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
 }
+.socials-container a {
+    background-color: var(--text-color);
+    border-radius: 50%;
+    height: 2rem;
+    width: 2rem;
+    box-sizing: border-box;
+    flex-shrink: 0;
+    display: grid;
+    place-items: center;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.05);
+}
+.socials-container a svg {
+    height: 1.25rem;
+    fill: var(--background-darker);
+}
+.socials-container a::before {
+    content: attr(data-social);
+    position: absolute;
+    background-color: var(--accent-color);
+    color: white;
+    text-decoration: none;
+    padding: 0.5em 1em;
+    border-radius: 100px;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.05);
+    transform: translateY(-30px) rotate(25deg);
+    opacity: 0;
+    transition: 200ms cubic-bezier(0.42, 0, 0.44, 1.68);
+}
+.socials-container a:hover  {
+    background-color: var(--accent-color);
+    fill: white;
+}
+
+.socials-container a:hover svg  {
+    fill: white;
+}
+.socials-container a::after {
+    content: "";
+    position: absolute;
+    height: 0;
+    width: 0;
+    border-left: 8px solid transparent;
+    border-right: 8px solid transparent;
+    border-top: 10px solid var(--accent-color);
+    transform: translateY(0) rotate(25deg);
+    opacity: 0;
+    transition: 200ms cubic-bezier(0.42, 0, 0.44, 1.68);
+}
+.socials-container a:hover::before {
+    transform: translateY(-50px) rotate(0);
+    opacity: 1;
+}
+.socials-container a:hover::after {
+    transform: translateY(-27px) rotate(0);
+    opacity: 1;
+}
+
 
 @media (max-width: 1000px) {
     .about, .nav {
