--- a/styles/main.css
+++ b/styles/main.css
@@ -15,6 +15,7 @@
         font-family: InterVariable, sans-serif;
     }
 }
+
 /*
 [data-theme="dark"] {
     --background-lighter: #24242e;
@@ -33,20 +34,20 @@
 }
 */
 [data-theme="dark"] {
-    --background-lighter: rgba(36,36,46,0.85);
+    --background-lighter: rgba(36, 36, 46, 0.85);
     --background-lighter-hex: #24242e;
-    --background-normal: rgba(32,32,42,0.85);
+    --background-normal: rgba(32, 32, 42, 0.85);
     --background-normal-hex: #20202a;
-    --background-darker: rgba(30,30,40,0.55);
+    --background-darker: rgba(30, 30, 40, 0.55);
     --background-darker-hex: #1e1e28;
     --text-color: #ffffff;
     --accent: #443dff;
 }
 
 [data-theme="light"] {
-    --background-lighter: rgba(245,245,245,0.45);
-    --background-normal: rgba(255,255,255,0.45);
-    --background-darker: rgba(224,224,224,0.45);
+    --background-lighter: rgba(245, 245, 245, 0.45);
+    --background-normal: rgba(255, 255, 255, 0.45);
+    --background-darker: rgba(224, 224, 224, 0.45);
     --background-lighter-hex: #f5f5f5;
     --background-normal-hex: #ffffff;
     --background-darker-hex: #e0e0e0;
@@ -66,12 +67,13 @@ body {
     align-items: center;
     color: var(--text-color);
 }
+
 body {
     position: relative;
     overflow: hidden;
-  }
+}
 
-  .background-wrapper {
+.background-wrapper {
     position: fixed;
     top: 0;
     left: 0;
@@ -80,9 +82,10 @@ body {
     z-index: -1;
     background-size: cover;
     background-position: center;
-  }
+}
 
-  .background1, .background2 {
+.background1,
+.background2 {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -90,15 +93,16 @@ body {
     background-size: cover;
     background-position: center;
     opacity: 0;
-  }
+}
 
-  .background1.active, .background2.active {
+.background1.active,
+.background2.active {
     opacity: 1;
     transition: opacity 3s ease-in-out;
-  }
+}
 
 p {
-    font-size:0.825rem;
+    font-size: 0.825rem;
 }
 
 .container {
@@ -171,16 +175,16 @@ p {
 
 .personal-description::-webkit-scrollbar {
     width: 0.25rem;
-    background: rgba(var(--background-lighter-rgb),0.1);
+    background: rgba(var(--background-lighter-rgb), 0.1);
 }
 
 .personal-description::-webkit-scrollbar-thumb {
-    background: rgba(var(--text-color-rgb),0.1);
+    background: rgba(var(--text-color-rgb), 0.1);
     border-radius: 0.25rem;
 }
 
 ::-webkit-scrollbar-corner {
-    background: rgba(var(--background-lighter-rgb),0);
+    background: rgba(var(--background-lighter-rgb), 0);
 }
 
 
@@ -266,7 +270,7 @@ hr {
     padding-top: 0.25rem;
     padding-bottom: 0.25rem;
     box-shadow: var(--text-color) 0px 0px 2px;
-    cursor:pointer;
+    cursor: pointer;
 }
 
 .rectangle-section {
@@ -282,12 +286,13 @@ hr {
     padding-bottom: 0.25rem;
     box-shadow: var(--text-color) 0px 0px 2px;
 }
+
 .rectangle-content {
     display: flex;
     width: 100%;
     justify-content: space-between;
     align-items: center;
-    cursor:pointer;
+    cursor: pointer;
 }
 
 .rectangle-text {
@@ -308,15 +313,17 @@ hr {
 }
 
 .project-img {
+    width: 100%;
     aspect-ratio: 16 / 9;
     object-fit: cover;
 }
 
 .project-video {
     width: 100%;
-    aspect-ratio: 16 / 9; /* Regola l'altezza a seconda del design */
+    aspect-ratio: 16 / 9;
+    /* Regola l'altezza a seconda del design */
     border: none;
-  }
+}
 
 .tags {
     display: flex;
@@ -334,11 +341,11 @@ hr {
 .clickable-tag {
     text-decoration: none;
     cursor: pointer;
-  }
+}
 
-  .clickable-tag:hover {
+.clickable-tag:hover {
     box-shadow: var(--text-color) 0px 0px 3px;
-  }
+}
 
 .hidden {
     display: none;
@@ -449,63 +456,94 @@ pre {
     background-color: var(--background-darker);
 }
 
-.snippet-content  {
+.snippet-content {
     max-width: 100% !important;
     overflow-x: auto !important;
 }
 
 .snippet-content pre {
-    white-space: pre-wrap; /* Allows code to wrap */
-    word-break: break-all; /* Breaks long words to prevent overflow */
+    white-space: pre-wrap;
+    /* Allows code to wrap */
+    word-break: break-all;
+    /* Breaks long words to prevent overflow */
     overflow-x: auto;
 }
 
 
 .navigation {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: center;
-    height: 2rem;
+    height: auto;
     border-radius: 0.375rem;
     background-color: var(--background-darker);
     margin: 0 0 0.25rem 0;
     flex-shrink: 0;
+    overflow-x: auto;
+    gap: 1rem;
+
 }
 
 
-.navigation div{
+.navigation div {
     display: flex;
     text-align: center;
     align-items: center;
-padding: 0 1rem;
-gap: 0.5rem;
-
-
 }
 
 .navigation p {
     font-size: 0.625rem;
-    padding: 0rem;
     height: 100%;
-}
-.navigation svg {
-    height: 1rem;
-    fill: var(--text-color);
+    color: rgba(var(--text-color-rgb), 0.65);
 }
 
-.navigation-clickable {
+.nav-project-tab {
+    display: flex;
+    align-items: center;
     cursor: pointer;
-    text-decoration: none;
+    transition: color 0.3s ease;
+    white-space: nowrap;
 }
 
-.navigation-clickable:hover {
-    font-weight: bold;
-  }
+.nav-project-tab:hover p{
+    color: rgba(var(--text-color-rgb), 1) !important;
+}
 
-  #swap-content {
+
+.nav-project-tab.active p{
+    color: rgba(var(--text-color-rgb), 1) !important;
+
+}
+
+.nav-project-icon {
+    width: 2.5rem;
+    height: 2.5rem;
+    object-fit:contain;
+
+}
+
+
+
+
+
+/* Stile per la barra di scorrimento orizzontale */
+.navigation::-webkit-scrollbar {
+    height: 4px;
+}
+
+.navigation::-webkit-scrollbar-thumb {
+    background-color: var(--primary-color);
+    border-radius: 2px;
+}
+
+.navigation::-webkit-scrollbar-track {
+    background-color: var(--background-lighter);
+}
+
+#swap-content {
     flex-grow: 1;
     overflow-y: auto;
-    padding-right: 0.5rem; /* Aggiunge un po' di spazio per la scrollbar */
+    /* Aggiunge un po' di spazio per la scrollbar */
 }
 
 /* Stile opzionale per la scrollbar */
@@ -538,7 +576,9 @@ gap: 0.5rem;
     background-color: #717171;
 }
 
-[x-cloak] { display: none !important; }
+[x-cloak] {
+    display: none !important;
+}
 
 .loading {
     position: absolute;
@@ -562,6 +602,7 @@ gap: 0.5rem;
     object-fit: cover;
     width: 100%;
 }
+
 .video-container {
     width: 100%;
     height: auto;
@@ -602,6 +643,7 @@ gap: 0.5rem;
     display: flex;
     gap: 20px;
 }
+
 .icon-wrapper i {
     background-color: var(--text-color);
     border-radius: 50%;
@@ -613,10 +655,12 @@ gap: 0.5rem;
     place-items: center;
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.05);
 }
+
 .icon-wrapper i svg {
     height: 1.25rem;
     fill: var(--background-darker-hex);
 }
+
 .icon-wrapper i::before {
     content: attr(data-social);
     position: absolute;
@@ -629,8 +673,9 @@ gap: 0.5rem;
     transform: translateY(-30px) rotate(25deg);
     opacity: 0;
     transition: 200ms cubic-bezier(0.42, 0, 0.44, 1.68);
-    pointer-events:none;
+    pointer-events: none;
 }
+
 .icon-wrapper i:hover {
     background-color: var(--accent-color);
     fill: white;
@@ -649,6 +694,7 @@ gap: 0.5rem;
     display: flex;
     justify-content: space-around;
 }
+
 .socials-container a {
     background-color: var(--text-color);
     border-radius: 50%;
@@ -660,10 +706,12 @@ gap: 0.5rem;
     place-items: center;
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.05);
 }
+
 .socials-container a svg {
     height: 1rem;
     fill: var(--background-darker-hex);
 }
+
 .socials-container a::before {
     content: attr(data-social);
     position: absolute;
@@ -676,16 +724,18 @@ gap: 0.5rem;
     transform: translateY(-30px) rotate(25deg);
     opacity: 0;
     transition: 200ms cubic-bezier(0.42, 0, 0.44, 1.68);
-    pointer-events:none;
+    pointer-events: none;
 }
-.socials-container a:hover  {
+
+.socials-container a:hover {
     background-color: var(--accent-color);
     fill: white;
 }
 
-.socials-container a:hover svg  {
+.socials-container a:hover svg {
     fill: white;
 }
+
 .socials-container a::after {
     content: "";
     position: absolute;
@@ -698,10 +748,12 @@ gap: 0.5rem;
     opacity: 0;
     transition: 200ms cubic-bezier(0.42, 0, 0.44, 1.68);
 }
+
 .socials-container a:hover::before {
     transform: translateY(-50px) rotate(0);
     opacity: 1;
 }
+
 .socials-container a:hover::after {
     transform: translateY(-27px) rotate(0);
     opacity: 1;
@@ -709,7 +761,9 @@ gap: 0.5rem;
 
 
 @media (max-width: 1000px) {
-    .about, .nav {
+
+    .about,
+    .nav {
         position: fixed;
         top: 0;
         height: 95%;
@@ -736,7 +790,8 @@ gap: 0.5rem;
 
     }
 
-    .about.show, .nav.show {
+    .about.show,
+    .nav.show {
         opacity: 1;
         visibility: visible;
         transform: translateX(0);
@@ -761,7 +816,8 @@ gap: 0.5rem;
     }
 
     .about-icon::before {
-        content: '\2630'; /* Unicode for hamburger menu icon */
+        content: '\2630';
+        /* Unicode for hamburger menu icon */
         font-size: 24px;
         color: var(--text-color);
     }
@@ -769,6 +825,7 @@ gap: 0.5rem;
 
 @media (max-width: 600px) {
     .snippet-rectangle {
-        flex: 1 1 100%; /* Su schermi stretti, gli elementi occuperanno il 100% della larghezza */
+        flex: 1 1 100%;
+        /* Su schermi stretti, gli elementi occuperanno il 100% della larghezza */
     }
 }
