--- a/styles/main.css
+++ b/styles/main.css
@@ -482,7 +482,11 @@ pre {
     overflow-x: auto;
     gap: 1rem;
     padding: 0.5rem;
+    position: relative;
+    overflow: visible;
 }
+
+
 
 .navigation div {
     display: flex;
@@ -504,10 +508,53 @@ pre {
     cursor: pointer;
     transition: color 0.3s ease;
     white-space: nowrap;
-    padding: 0 0.5rem;
+    padding: 0.25rem 0.5rem;
     border-radius: 0.25rem;
+    position: relative;
     background-color: rgba(var(--text-color-rgb), 0.05) ;
 }
+
+.nav-project-preview {
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    transform: translateX(-50%) translateY(10px);
+    background-color: var(--background-darker-hex);
+    border-radius: 0.375rem;
+    box-shadow: var(--text-color) 0px 0px 3px;
+    z-index: 999;
+    width: 25vw;
+    height: fit-content;
+    text-wrap: wrap;
+    padding: 1rem;
+    margin-top: 0.5rem;
+    display: flex;
+    flex-direction: column;
+    opacity: 0;
+    transition: opacity 0.3s ease, transform 0.3s ease-in-out;
+}
+
+.nav-project-tab:hover  .nav-project-preview {
+    opacity: 1;
+    transform: translateX(-50%) translateY(0); /* Movimento verso l'alto */
+
+}
+
+.nav-preview-image {
+    width: 100%;
+    height: auto;
+    border-radius: 0.25rem;
+    margin-bottom: 0.5rem;
+}
+
+.nav-preview-description {
+    font-size: 0.75rem;
+    color: var(--text-color);
+    margin: 0;
+    text-align: start;
+}
+
+
 
 .nav-project-tab:hover p {
     color: rgba(var(--text-color-rgb), 1) ;
@@ -773,36 +820,25 @@ pre {
 
 @media (max-width: 1000px) {
 
-    .about,
-    .nav {
+    .about {
         position: fixed;
         top: 0;
         height: 95%;
         z-index: 1000;
-        background-color: var(--background-lighter);
+        background-color: var(--background-lighter-hex);
         overflow-y: auto;
         box-shadow: var(--text-color) 0px 0px 5px;
         transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out, visibility 0.5s ease-in-out;
         visibility: hidden;
         margin: 2.5%;
-    }
-
-    .about {
         left: 0;
         transform: translateX(-100%);
         width: 35%;
-
     }
 
-    .nav {
-        right: 0;
-        transform: translateX(100%);
-        width: 10%;
 
-    }
 
-    .about.show,
-    .nav.show {
+    .about.show {
         opacity: 1;
         visibility: visible;
         transform: translateX(0);
@@ -832,11 +868,43 @@ pre {
         font-size: 24px;
         color: var(--text-color);
     }
+    .nav-project-preview {
+        width: 50vw;
+}
 }
 
 @media (max-width: 600px) {
+
     .snippet-rectangle {
         flex: 1 1 100%;
         /* Su schermi stretti, gli elementi occuperanno il 100% della larghezza */
     }
+}
+
+@media (max-width: 450px) {
+.content {
+    max-width: 80vw;
+}
+.navigation {
+    max-width: 80vw;
+    overflow-x: scroll;
+}
+.project-title {
+    display: block;
+}
+.tags {
+
+margin-top: 1rem;
+flex-wrap: wrap; /* Permette di avvolgere gli elementi su più righe */
+    gap: 0.5rem; /* Spazio tra gli elementi */
+}
+.tags .tag {
+    flex: 1 1 calc(50% - 0.5rem); /* Ogni tag occupa il 50% della larghezza meno il gap */
+    box-sizing: border-box; /* Assicura che il padding non modifichi la larghezza */
+}
+.snippet-tabs {
+    display: none;
+}
+
+
 }
